--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
     
+    // Thymeleaf Layout Dialect 추가
+    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+    
     // JPA & Database
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     runtimeOnly 'com.h2database:h2'
